# ktir-cpu

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pre-review-ci.yml
benchmarks/: README.md  bench_indirect_emul_time.py  bench_utils.py
benchmarks/configs/: indirect_emul.toml
cli/: README.md  __init__.py  ktir_cpu_run.py
examples/ktir/: reduce_multiop.mlir  softmax_wide.mlir
examples/latency/: softmax_small.mlir  softmax_small_explicit.mlir
examples/triton-ktir/: sdpa_2d.mlir  softmax_fwd_ktir.mlir  vector_add_dynamic_ktir.mlir
ktir_cpu/: affine.py  latency.py  memory.py  parser.py  parser_ast.py  parser_utils.py
ktir_cpu/dialects/: arith_ops.py  ktdp_ops.py  linalg_ops.py  tensor_ops.py
ktir_cpu/mlir_frontend/: parser.py
ktir_cpu/ops/: memory_ops.py
notebooks/: latency_demo.ipynb
sdd-specs/: categorized-issues.html  categorized-issues.md  sdd-open-issues.md
tests/: conftest.py  test_affine.py  test_ast.py  test_block_gather_fast_path.py  test_cli.py  test_dialects_exec.py  test_dialects_parse.py  test_distributed_view.py  test_examples.py  test_latency.py  test_parser_utils.py
tests/mlir_frontend/: conftest.py  test_examples_adapt.py  test_parse_adapt.py
